--- a/index.html
+++ b/index.html
@@ -1,23 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Document</title>
 
     <!-- Leaflet stylesheet -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
-    integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-    crossorigin=""/>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+      integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+      crossorigin=""
+    />
 
     <!-- Leaflet JS -->
-    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
-    integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
-    crossorigin=""></script>
-
-</head>
-<body>
-    <!-- <div id="mapid"></div> -->
-</body>
+    <script
+      src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+      integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+      crossorigin=""
+    ></script>
+  </head>
+  <body>
+    <div id="mapid" style="width: 100%; height: 600px;">
+      <script>
+          
+        var mymap = L.map("mapid",{crs: L.CRS.EPSG3395}).setView([66.036036, 60.109374], 14);
+        var marker1 = L.marker([66.032838, 60.088255]).addTo(mymap).on('click', function(e) {
+            alert('Кликнул по первому маркеру!')
+        });
+        marker1.bindPopup("<b>Первый маркер</b><br>Маркер моей мечты").openPopup();
+        var marker2 = L.marker([66.030559, 60.093376]).addTo(mymap).on('click', function(e) {
+            alert('Кликнул по второму маркеру!')
+        });;
+        marker2.bindPopup("<b>Второй маркер</b><br>Маркер моей жены.").openPopup();
+        
+        L.tileLayer(
+          "http://vec{s}.maps.yandex.net/tiles?l=map&v=4.55.2&z={z}&x={x}&y={y}&scale=2&lang=ru_RU",
+          {
+            subdomains: ["01", "02", "03", "04"],
+            attribution: '<a http="yandex.ru" target="_blank">Яндекс</a>',
+            reuseTiles: true,
+            updateWhenIdle: false,
+          }
+        ).addTo(mymap);
+      </script>
+    </div>
+  </body>
 </html>
