--- a/index.html
+++ b/index.html
@@ -24,24 +24,26 @@
     ></script>
   </head>
 
-
-
   <body>
     <!-- Side card definition and style-->
     <div id="sideCard">
-      <a
-        href="javascript:void(0)"
-        style="
-          position: absolute;
-          top: 0;
-          right: 25px;
-          font-size: 36px;
-          margin-left: 50px;
-        "
-        onclick="closeSide"
-        >&times;</a
-      >
-      <p id="markerDescription"></p>
+      <!-- Side card close icon -->
+
+      <div id="markerWrapper">
+        <img
+          id="closeIcon"
+          src="img/close.svg"
+          alt="close icon"
+          onclick="closeSide()"
+        />
+        <img
+          id="markerImage"
+          src="https://sun9-27.userapi.com/c853624/v853624413/1c15bf/YIa9VhCacIg.jpg"
+          alt=""
+        />
+        <source />
+        <p id="markerDescription"></p>
+      </div>
     </div>
     <!-- Создаём элемент карты -->
     <div id="mapid" style="width: 100%; height: 600px;"></div>
