Moved sideCard from left to right. Added sideCard background transparency. Added sideCard a header. Linked each marker with its own unique set of items

--- a/index.html
+++ b/index.html
@@ -30,23 +30,24 @@
       <!-- Side card close icon -->
 
       <div id="markerWrapper">
-        <img
+        <!-- <img
           id="closeIcon"
           src="img/close.svg"
           alt="close icon"
           onclick="closeSide()"
-        />
+        /> -->
         <img
           id="markerImage"
-          src="https://sun9-27.userapi.com/c853624/v853624413/1c15bf/YIa9VhCacIg.jpg"
-          alt=""
+          alt=" image inside sideCard"
         />
+        <h2 id="markerHeader">
+        </h2>
         <source />
         <p id="markerDescription"></p>
       </div>
     </div>
     <!-- Создаём элемент карты -->
-    <div id="mapid" style="width: 100%; height: 600px;"></div>
+    <div id="mapid"></div>
     <script src="map.js"></script>
   </body>
 </html>
