--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
 
   <body>
     <!-- Side card definition and style-->
-    <header id="header">МОЯ ИНТА</header>
+    <header id="header">
+      <div id="headerContentWrapper">
+        <img src="img/deer.svg" alt="icon of a deer" />
+        <h2>МОЯ ИНТА</h2>
+      </div>
+      <a href="#">Главная</a>
+      <a href="#">Контакты</a>
+    </header>
     <!-- <div id="projectInfoWrapper">
         <ul id ="projectInfo">
             <li>Проект Поздеевой Алины Олеговны</li>
