--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
   </head>
 
   <body>
-    <!-- Side card definition and style-->
+
+    <!-- Header definition -->
     <header id="header">
       <div id="headerContentWrapper">
         <img src="img/deer.svg" alt="icon of a deer" />
@@ -39,13 +40,8 @@
       <a href="#">Главная</a>
       <a href="#">Контакты</a>
     </header>
-    <!-- <div id="projectInfoWrapper">
-        <ul id ="projectInfo">
-            <li>Проект Поздеевой Алины Олеговны</li>
-            <li>ГМ-07-1</li>
-            <li>Сыктывкарский Колледж Культуры</li>
-        </ul>
-    </div> -->
+    
+    <!-- Side card definition and style-->
     <div id="sideCard">
       <!-- Side card close icon -->
 
@@ -56,7 +52,8 @@
           alt="close icon"
           onclick="closeSide()"
         /> -->
-        <img id="markerImage" alt=" image inside sideCard" />
+        <img id="markerImage" alt=" image inside sideCard"/>
+        <button id = "markerButton" type = "button" onclick="changeTime()"></button>
         <h2 id="markerHeader"></h2>
         <source />
         <p id="markerDescription"></p>
