Added reveal of hidden content on Header hover. Added placeholders for old images. Got rid of zoom control buttons

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
         <img src="img/deer.svg" alt="icon of a deer" />
         <h2>МОЯ ИНТА</h2>
       </div>
-      <a href="#">Главная</a>
-      <a href="#">Контакты</a>
+      <!-- <iframe frameborder="0" style="-moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5); -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5); box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5); overflow: hidden; border: 0; width: 700px; height: 302px;" src="https://rasp.yandex.ru/informers/station/9604003/?size=5&amp;color=6&amp;type=train"></iframe> -->
+      <a href="#" class="headerHidden">Главная</a>
+      <a href="#" class="headerHidden">Контакты</a>
     </header>
     
     <!-- Side card definition and style-->
@@ -53,6 +54,7 @@
           onclick="closeSide()"
         /> -->
         <img id="markerImage" alt=" image inside sideCard"/>
+        <!-- <button id = "markerButtonArrowLeft" type = "button" onclick="changeTime()"></button> -->
         <button id = "markerButton" type = "button" onclick="changeTime()"></button>
         <h2 id="markerHeader"></h2>
         <source />
