--- a/about.html
+++ b/about.html
@@ -13,15 +13,18 @@
             <div class="aboutColumnContainer">
 
                 <a href="index.html"><h1>Моя Инта</h1></a>
-                <h2>Краеведческий альбом</h2>
+                <!-- <h2>Краеведческий альбом</h2> -->
                 <p>
-                    Дипломный проект
-                    Поздеевой Алины<br>
-                    Группа ГМ-07-1</p>
-                <p>
-                    Колледж Искусств РК<br>
-                    <b>2020г.</b>
+                    <span><b>Дипломный проект.</b></span><br>
+                    <b>Автор:</b> студентка 3 курса очного отделения<br>
+                    Поздеева Алина Олеговна.
                 </p>
+                <p>
+                    <b>Специальность:</b> «Библиотековедение»<br>
+                    Руководитель: Карлова Ольга Ивановна<br>
+                </p>
+                <p style="display:block; margin-top:5em">
+                    <b></b>Сыктывкар 2020г.</b>
                 </p>
             </div>
         </div>
