Added clouds that move when mouse moves

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                 </p>
                 <p>
                     <b>Специальность:</b> «Библиотековедение»<br>
-                    Руководитель: Карлова Ольга Ивановна<br>
+                    <b>Руководитель:</b> Карлова Ольга Ивановна<br>
                 </p>
                 <p style="display:block; margin-top:5em">
                     <b></b>Сыктывкар 2020г.</b>
