--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
       </div>
     </div>
     <!-- Создаём элемент карты -->
+
     <div id="mapid"></div>
+    <div id="clouds"></div>
     <script src="map.js"></script>
   </body>
 </html>
