Implementeed fade of scroll icon on sideCard scroll

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     </header>
     <!-- Side card definition and style-->
     <div id="sideCard">
+      <div id="markerCloseWrapper">
+        <img src="img/scroll3.svg" id="markerScroll" />
+      </div>
       <!-- Side card close icon -->
       <div id="markerCloseWrapper">
         <span
