Added info of photo owner

--- a/about.html
+++ b/about.html
@@ -23,6 +23,9 @@
                     <b>Специальность:</b> «Библиотековедение»<br>
                     <b>Руководитель:</b> Карлова Ольга Ивановна<br>
                 </p>
+                <p>
+                    <b>Фото предоставил:</b> Денис Куропаткин<br>
+                </p>
                 <p style="display:block; margin-top:5em">
                     <b></b>Сыктывкар 2020г.</b>
                 </p>
